--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories{
 
 ext{
     //the build number that this mod is made for
-    mindustryVersion = 'v129.2'
+    mindustryVersion = 'v130'
     jabelVersion = "0.4.0"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
 }
@@ -68,6 +68,19 @@ jar{
     }
 }
 
+task alphableed doFirst{
+    exec{
+        workingDir "$rootDir"
+
+        println "Alpha-bleeding sprites..."
+        if(System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("windows")){
+            commandLine("cmd", "/c", "alpha-bleeding-windows.exe", "--replace", "./assets/sprites/")
+        }else{
+            commandLine("./alpha-bleed", "./assets/sprites/")
+        }
+    }
+}
+
 task deploy(type: Jar){
     dependsOn jarAndroid
     dependsOn jar
@@ -82,3 +95,7 @@ task deploy(type: Jar){
         }
     }
 }
+
+task bleedJar dependsOn "alphableed", "jar"
+
+task bleedDeploy dependsOn "alphableed", "deploy"
