--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -1,6 +1,6 @@
-name: Java CI
+name: Pull Request Test
 
-on: [push]
+on: [pull_request]
 
 jobs:
   buildJar:
@@ -20,5 +20,5 @@ jobs:
     - name: Upload built jar file
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ github.event.repository.name }}
+        name: ProgMats Pull Request (zipped)
         path: build/libs/${{ github.event.repository.name }}.jar
