Fuel-based Smelter: Pyroclast Forge
I said I was gonna use it, and I did.

Rejected PRs are opportunities.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -51,25 +51,14 @@ liquid.prog-mats-magma.details = This is unobtainable, and it's only purpose is 
 
 block.prog-mats-mindron-collider.name = Collider
 block.prog-mats-mindron-collider.description = Accelerates titanium and thorium particles at each other to fuse fusium. Requires tons of power.
+block.prog-mats-forge.name = Pyroclast Forge
+block.prog-mats-forge.description = Smelts massive batches of sand, lead, and coal into silicon and metaglass, using pyratite as an additional fuel source. Less fuel is used in hot locations.
 block.prog-mats-shell-press.name = Casing Roller
 block.prog-mats-shell-press.description = Alloys metals into casings used in missile construction.\nThe item ui looks weird when there's multiple on the map. I cannot fix this, as it's an issue with MultiLib and not my mod.
 block.prog-mats-missile-factory.name = Missile Assembler
 block.prog-mats-missile-factory.description = Assembles missiles into missile casings.\nThe item ui looks weird when there's multiple on the map. I cannot fix this, as it's an issue with MultiLib and not my mod.
 block.prog-mats-sentry-builder.name = Sentry Assembler
 block.prog-mats-sentry-builder.description = Assembles sentry units and packs them into boxes.\nThe item ui looks weird when there's multiple on the map. I cannot fix this, as it's an issue with MultiLib and not my mod.
-
-# Power
-
-block.prog-mats-rainbow-power-node.name = Rainbow Power Node
-block.prog-mats-rainbow-power-node.description = Better than the average power node. Also is rainbowy.\nSandbox only.
-block.prog-mats-rainbow-power-node.details = SPREAD THE GAY POWER!
-block.prog-mats-rainbow-power-source.name = Rainbow Power Source
-block.prog-mats-rainbow-power-source.description = Better than the average power source. Also is rainbowy.\nSandbox only.
-block.prog-mats-rainbow-power-source.details = CREATE THE GAY POWER!
-block.prog-mats-rainbow-power-boost.name = Rainbow Power Boost Source
-block.prog-mats-rainbow-power-boost.description = Like the rainbower power source, but anything attached that can be overdriven gets boosted.\nSandbox only.
-block.prog-mats-rainbow-power-boost.details = AMPLIFY WITH THE GAY POWER!
-
 
 # Turret
 
@@ -184,8 +173,7 @@ block.prog-mats-storm.description = Zaps numerous random targets in range.
 # Distribution
 
 block.prog-mats-floating-conveyor.name = Hydroconveyor
-block.prog-mats-floating-conveyor.description = Transports items forward. It's placable on deep liquids, but will be slower if done so.
-block.prog-mats-floating-conveyor.details = Don't ask why deep liquids make it slower, I'm not sure why either.
+block.prog-mats-floating-conveyor.description = Transports items forward. Faster than standard conveyors, but slower than titanium conveyors. Placable in deep liquids.
 block.prog-mats-burst-driver.name = Burst Driver
 block.prog-mats-burst-driver.description = Long-range item transport structure. Fires massive long bursts of items to other burst drivers.\nSingular items are lighter than a large amount bunched together, so it's range and speed are faster than mass drivers.
 
@@ -210,6 +198,16 @@ block.prog-mats-everything-gun.details = Ilya helped me with the increase damage
 
 block.prog-mats-sand-driver.name = Sand Driver
 block.prog-mats-sand-driver.description = Long-range item generation structure. Fires massive long bursts of items to other burst drivers.\nMagically creates and fires random items.\nSandbox only.
+
+block.prog-mats-rainbow-power-node.name = Rainbow Power Node
+block.prog-mats-rainbow-power-node.description = Better than the average power node. Also is rainbowy.\nSandbox only.
+block.prog-mats-rainbow-power-node.details = SPREAD THE GAY POWER!
+block.prog-mats-rainbow-power-source.name = Rainbow Power Source
+block.prog-mats-rainbow-power-source.description = Better than the average power source. Also is rainbowy.\nSandbox only.
+block.prog-mats-rainbow-power-source.details = CREATE THE GAY POWER!
+block.prog-mats-rainbow-power-boost.name = Rainbow Power Boost Source
+block.prog-mats-rainbow-power-boost.description = Like the rainbower power source, but anything attached that can be overdriven gets boosted.\nSandbox only.
+block.prog-mats-rainbow-power-boost.details = AMPLIFY WITH THE GAY POWER!
 
 block.prog-mats-sandbox-wall.name = Sandbox Wall
 block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nSandbox only.\n[gray]Note: Plastanium wall toggle does not work, it's not possible with current game code.
@@ -283,6 +281,10 @@ bar.pm-shoot-duration = Duration: {0}%
 bar.pm-lifetime = Lifetime: {0}%
 bar.pm-flare-limit = Flares: {0}/{1}
 
+bar.pm-fuel = Fuel: {0}
+bar.pm-fuel-unneeded = Not required
+bar.pm-fuel-use = Fuel per craft: {0}
+
 stat.pm-sentry-lifetime = [lightgray]([stat]{0}[lightgray] second lifetime)
 
 stat.pm-land-speed = On land: 
@@ -294,6 +296,12 @@ stat.pm-inferno = Everything in range
 stat.pm-static-power = {0} power units/second per link
 
 stat.pm-multi-recipe = [accent]Recipe {0}:
+
+pm-fuel.input [stat]{0}[lightgray] fuel added per item
+pm-fuel.use = [stat]{0}[lightgray] fuel used per craft
+pm-fuel.capacity = [stat]{0}[lightgray] fuel capacity
+### The extra space is deliberate
+pm-fuel.affinity = [stat]Affinities: 
 
 bullet.pm-sword-speed = [stat]{0}[lightgray] speed
 
