--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -281,7 +281,7 @@ bar.pm-shoot-duration = Duration: {0}%
 bar.pm-lifetime = Lifetime: {0}%
 bar.pm-flare-limit = Flares: {0}/{1}
 
-bar.pm-fuel = Fuel: {0}
+bar.pm-fuel = Fuel: {0}{1}
 bar.pm-fuel-unneeded = Not required
 bar.pm-fuel-use = Fuel per craft: {0}
 
