Don't display build cost of missiles and sentries

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -135,7 +135,7 @@ block.prog-mats-strikedown.description = Fires [red]strike missiles[] into the s
 block.prog-mats-strikedown.details = Amazing sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?
 block.prog-mats-arbiter.name = [red]Trinity
 block.prog-mats-arbiter.description = Fires nuclear [red]strike missiles[] into the sky that land and explode on targets. Once at high enough altitude, thie missile can drop down early to strike targets.
-block.prog-mats-arbiter.details = Amazing sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?\n\nQuick history lesson: On July 16, 1945, the US Millitary conducted the Trinity test, the first ever detonation of a nuclear bomb.
+block.prog-mats-arbiter.details = Amazing sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?\n\nOn July 16, 1945, the US Military detonated the first ever nuclear bomb. The test was called "Codename [red]Trinity[]."
 ### Missiles
 block.prog-mats-empty-missile.name = Missile Shell
 block.prog-mats-empty-missile.description = An empty missile shell.
