Better missile construction drawing
Also update descriptions

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -53,12 +53,12 @@ block.prog-mats-mindron-collider.name = Collider
 block.prog-mats-mindron-collider.description = Accelerates titanium and thorium particles at each other to fuse fusium. Requires tons of power.
 block.prog-mats-forge.name = Pyroclast Forge
 block.prog-mats-forge.description = Smelts massive batches of sand, lead, and coal into silicon and metaglass, using pyratite as an additional fuel source. Less fuel is used in hot locations.
-block.prog-mats-shell-press.name = Casing Roller
-block.prog-mats-shell-press.description = Alloys metals into casings used in missile construction.\nThe item ui looks weird when there's multiple on the map. I cannot fix this, as it's an issue with MultiLib and not my mod.
+block.prog-mats-shell-press.name = Missile Shell Constructer
+block.prog-mats-shell-press.description = Builds empty missile shells.
 block.prog-mats-missile-factory.name = Missile Assembler
-block.prog-mats-missile-factory.description = Assembles missiles into missile casings.\nThe item ui looks weird when there's multiple on the map. I cannot fix this, as it's an issue with MultiLib and not my mod.
-block.prog-mats-sentry-builder.name = Sentry Assembler
-block.prog-mats-sentry-builder.description = Assembles sentry units and packs them into boxes.\nThe item ui looks weird when there's multiple on the map. I cannot fix this, as it's an issue with MultiLib and not my mod.
+block.prog-mats-missile-factory.description = Builds the cores of missiles and places them into empty shells.
+block.prog-mats-sentry-builder.name = Sentry Factory
+block.prog-mats-sentry-builder.description = Constructs sentry units that can be manually activated or launched.
 
 # Turret
 
