--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -4,44 +4,6 @@ item.prog-mats-techtanite.name = Fusium
 item.prog-mats-techtanite.description = A sythetic compound of titanium and thorium. Used in advanced electronics.
 item.prog-mats-techtanite.details = Based on the real life element Technetium.
 
-## Missile
-item.prog-mats-missile-shell.name = Missile Shell
-item.prog-mats-missile-shell.description = A plate used in the casing of missiles.
-item.prog-mats-missile-shell.details = Sprite by VozDuh.
-item.prog-mats-basic-missile.name = Basic Missile
-item.prog-mats-basic-missile.description = Used by the [red]Strikedown[] as ammo.
-item.prog-mats-basic-missile.details = Sprite by VozDuh.
-item.prog-mats-emp-missile.name = EMP Missile
-item.prog-mats-emp-missile.description = Used by the [red]Strikedown[] as ammo.\n\n[orange]Deals less damage than a basic missile but electrocutes enemies.
-item.prog-mats-emp-missile.details = Sprite by VozDuh.
-# item.prog-mats-quantum-missile.name = Quantum Missile
-# item.prog-mats-quantum-missile.description = Used by the [red]Strikedown[] as ammo.\n\n[orange]Deals less damage than a basic missile but causes units to begin teleporting uncontrolably. Repeated teleportation puts a lot of strain on them, dealing permanent damage. More effective on large targets.
-item.prog-mats-recursive-missile.name = Recursive Missile
-item.prog-mats-recursive-missile.description = Used by the [red]Strikedown[] as ammo.\n\n[orange]Each hit deals less damage than a basic missile, but launches smaller missiles on impact. Can do this up to 2 times.
-
-## Nuke
-item.prog-mats-nuke-shell.name = Nuclear Missile Shell
-item.prog-mats-nuke-shell.description = A plate used in the casing of nuclear missiles.
-item.prog-mats-nuke-shell.details = Sprite by VozDuh.
-item.prog-mats-basic-nuke.name = Basic Nuke
-item.prog-mats-basic-nuke.description = Used by the [red]Trinity[] as ammo.
-item.prog-mats-basic-nuke.details = Sprite by VozDuh.
-# item.prog-mats-emp-nuke.name = EMP Nuke
-# item.prog-mats-emp-nuke.description = Used by the [red]Trinity[] as ammo.\n\n[orange]Deals less damage than a basic nuke but electrocutes enemies.
-# item.prog-mats-emp-nuke.details = Sprite by VozDuh.
-item.prog-mats-cluster-nuke.name = Cluster Nuke
-item.prog-mats-cluster-nuke.description = Used by the [red]Trinity[] as ammo.\n\n[orange]Splits into many smaller missiles before landing.
-item.prog-mats-sentry-nuke.name = Drop Pod
-item.prog-mats-sentry-nuke.description = Used by the [red]Trinity[] as ammo.\n\n[orange]Instead of exploding, it drops a large amount of sentry units carrying pyratite and blast compound with a chance of dying on impact.
-
-## Drone
-item.prog-mats-basic-sentry-box.name = Basic Sentry Box
-item.prog-mats-basic-sentry-box.description = Contains a single [accent]Barrage[] that the [orange]Tinker[] can launch.
-item.prog-mats-strike-sentry-box.name = Strike Sentry Box
-item.prog-mats-strike-sentry-box.description = Contains a single [accent]Downpour[] that the [orange]Tinker[] can launch.
-item.prog-mats-dash-sentry-box.name = Dash Sentry Box
-item.prog-mats-dash-sentry-box.description = Contains a single [accent]Rapier[] that the [orange]Tinker[] can launch.
-
 ## Liquid
 liquid.prog-mats-magma.name = Magma
 liquid.prog-mats-magma.description = Actually, it's supposed to be lava since it's on the surface...
@@ -96,11 +58,11 @@ block.prog-mats-tinker.description = Launches strong sentry units that expire af
 block.prog-mats-tinker.details = Sprite by Kapzduke
 ### Ammo payloads
 block.prog-mats-basic-sentry.name = Basic Sentry
-block.prog-mats-basic-sentry.description = See Barrage unit for more info.
+block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [orange]Tinkers[] as ammo.
 block.prog-mats-strike-sentry.name = Strike Sentry
-block.prog-mats-strike-sentry.description = See Downpour unit for more info.
+block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [orange]Tinkers[] as ammo.
 block.prog-mats-dash-sentry.name = Dash Sentry
-block.prog-mats-dash-sentry.description = See Rapier unit for more info.
+block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [orange]Tinkers[] as ammo.
 
 ## Vaccinator
 block.prog-mats-vaccinator.name = [red]Vaccinator
@@ -135,23 +97,23 @@ block.prog-mats-strikedown.description = Fires [red]strike missiles[] into the s
 block.prog-mats-strikedown.details = Amazing sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?
 block.prog-mats-arbiter.name = [red]Trinity
 block.prog-mats-arbiter.description = Fires nuclear [red]strike missiles[] into the sky that land and explode on targets. Once at high enough altitude, thie missile can drop down early to strike targets.
-block.prog-mats-arbiter.details = Amazing sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?\n\nOn July 16, 1945, the US Military detonated the first ever nuclear bomb. The test was called "Codename [red]Trinity[]."
+block.prog-mats-arbiter.details = Amazing sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?\n\nOn July 16, 1945, the first ever nuclear bomb was detonated in a test conducted by the US Military. The test was called "Codename [red]Trinity[]."
 ### Missiles
 block.prog-mats-empty-missile.name = Missile Shell
 block.prog-mats-empty-missile.description = An empty missile shell.
 block.prog-mats-basic-missile.name = Basic Missile
-block.prog-mats-basic-missile.description = Explodes on landing, dealing a lot of damage.\nUsed by the [red]Strikedown[] as ammo.
+block.prog-mats-basic-missile.description = Explodes on landing, dealing a lot of damage.\nUsed by [red]Strikedowns[] as ammo.
 block.prog-mats-emp-missile.name = EMP Missile
-block.prog-mats-emp-missile.description = Explodes on landing, dealing a damage and stunning units in the area.\nUsed by the [red]Strikedown[] as ammo.
+block.prog-mats-emp-missile.description = Explodes on landing, dealing a damage and stunning units in the area.\nUsed by [red]Strikedowns[] as ammo.
 block.prog-mats-recursive-missile.name = Recursive Missile
-block.prog-mats-recursive-missile.description = Explodes on landing, dealing a lot of damage, and launches smaller missiles on impact. Can do this up to 2 times.\nUsed by the [red]Strikedown[] as ammo.
+block.prog-mats-recursive-missile.description = Explodes on landing, dealing a lot of damage, and launches smaller missiles on impact. Can do this up to 2 times.\nUsed by [red]Strikedowns[] as ammo.
 block.prog-mats-recursive-missile.details = The physics of this make no sense.
 block.prog-mats-empty-nuke.name = Nuclear Missile Shell
 block.prog-mats-empty-nuke.description = An empty nuclear missile shell.
 block.prog-mats-basic-nuke.name = Basic Nuke
-block.prog-mats-basic-nuke.description = Explodes on landing, dealing a ton of damage.\nUsed by the [red]Trinity[] as ammo.
+block.prog-mats-basic-nuke.description = Explodes on landing, dealing a ton of damage.\nUsed by [red]Trinitys[] as ammo.
 block.prog-mats-cluster-nuke.name = Cluster Nuke
-block.prog-mats-cluster-nuke.description = Splits before landing, creating multiple impacts that deal a lot of damage.\nUsed by the [red]Trinity[] as ammo.
+block.prog-mats-cluster-nuke.description = Splits before landing, creating multiple impacts that deal a lot of damage.\nUsed by [red]Trinitys[] as ammo.
 
 ## Pixel
 block.prog-mats-bit.name = [pink]Pixel
@@ -206,13 +168,14 @@ block.prog-mats-rainbow-power-source.name = Rainbow Power Source
 block.prog-mats-rainbow-power-source.description = Better than the average power source. Also is rainbowy.\nSandbox only.
 block.prog-mats-rainbow-power-source.details = CREATE THE GAY POWER!
 block.prog-mats-rainbow-power-boost.name = Rainbow Power Boost Source
-block.prog-mats-rainbow-power-boost.description = Like the rainbower power source, but anything attached that can be overdriven gets boosted.\nSandbox only.
+block.prog-mats-rainbow-power-boost.description = Like the rainbow power source, but anything attached that can be overdriven gets boosted.\nSandbox only.
 block.prog-mats-rainbow-power-boost.details = AMPLIFY WITH THE GAY POWER!
 
 block.prog-mats-sandbox-wall.name = Sandbox Wall
 block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nSandbox only.\n[gray]Note: Plastanium wall toggle does not work, it's not possible with current game code.
 block.prog-mats-sandbox-wall-large.name = Large Sandbox Wall
 block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled. \nSandbox only. \n[gray]Note: Plastanium wall toggle does not work, it's not possible with current game code.
+pm-infinity = Infinity
 
 block.prog-mats-god-factory.name = Death Factory
 block.prog-mats-god-factory.description = Produces Death.\nSandbox only.
@@ -297,11 +260,14 @@ stat.pm-static-power = {0} power units/second per link
 
 stat.pm-multi-recipe = [accent]Recipe {0}:
 
+stat.pm-fuel = Fuel
 pm-fuel.input [stat]{0}[lightgray] fuel added per item
 pm-fuel.use = [stat]{0}[lightgray] fuel used per craft
 pm-fuel.capacity = [stat]{0}[lightgray] fuel capacity
 ### The extra space is deliberate
 pm-fuel.affinity = [stat]Affinities: 
+
+stat.pm-products = Products
 
 bullet.pm-sword-speed = [stat]{0}[lightgray] speed
 
@@ -334,5 +300,5 @@ setting.pm-farting.description = Restart required to apply changes.
 
 ## Mod
 
-mod.prog-mats.author = [#FCC21B]Creator:\n        MEEP of Faith[]\n\n[#FCC21B]Contributors:[]\n        [#FCC21B]ThirstyBoi[] (Eruptor sprite)\n        [#FCC21B]Goober[] (Kugelblitz and Popeshadow sprites)\n        [#FCC21B]VozDuh[] (Missile turret sprites, new icon)\n        [#FCC21B]Ilya246[] (Luminocity damage ramping)\n        [#FCC21B]Younggam[] (Multi Lib)\n        [#FCC21B]Kapzduke[] (Tinker sprites)\n        [#FCC21B]GlennFolker[] (Alphableeder)\n        [#FCC21B]Eye of Darkness[] (Some code taken from AC)\n        [#FCC21B]lordReddx[] (RU Translation)\n        Some sounds from Freesound.\n        Anyone I stole code from.
+mod.prog-mats.author = [#FCC21B]Creator:\n        MEEP of Faith[]\n\n[#FCC21B]Contributors:[]\n        [#FCC21B]ThirstyBoi[] (Eruptor sprite)\n        [#FCC21B]Goober[] (Kugelblitz and Popeshadow sprites)\n        [#FCC21B]VozDuh[] (Missile turret sprites, new icon)\n        [#FCC21B]Ilya246[] (Luminocity damage ramping)\n        [#FCC21B]Kapzduke[] (Tinker sprites)\n        [#FCC21B]GlennFolker[] (Alphableeder)\n        [#FCC21B]lordReddx[] (RU Translation)\n        Some sounds from Freesound.\n        Anyone I stole code from.
 mod.prog-mats.description = Progressed Materials, but in Java. My main mod, which mostly just adds turrets. I'm just experimenting to see what I can do with the power I hold.\n\nThe name definitely isn't made of the synonyms of "Advance" and "Content".
