--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,7 +7,7 @@ item.prog-mats-techtanite.details = Based on the real life element Technetium.
 ## Liquid
 liquid.prog-mats-magma.name = Magma
 liquid.prog-mats-magma.description = Actually, it's supposed to be lava since it's on the surface...
-liquid.prog-mats-magma.details = This is unobtainable, and it's only purpose is to be spawned by Eruptor turrets.
+liquid.prog-mats-magma.details = This is unobtainable, and it's only purpose is to be spawned by Eruptor turrets and burn everything.
 
 # Production
 
@@ -19,6 +19,7 @@ block.prog-mats-shell-press.name = Missile Shell Constructer
 block.prog-mats-shell-press.description = Builds empty missile shells.
 block.prog-mats-missile-factory.name = Missile Assembler
 block.prog-mats-missile-factory.description = Builds the cores of missiles and places them into empty shells.
+block.prog-mats-missile-factory.details = Resprite by TheMalaysianDude.
 block.prog-mats-sentry-builder.name = Sentry Factory
 block.prog-mats-sentry-builder.description = Constructs sentry units that can be manually activated or launched.
 
@@ -45,7 +46,7 @@ block.prog-mats-mivnigun.details = Dom't ask me to make a "M-VIII-nigun."
 ## Blackhole
 block.prog-mats-blackhole.name = [purple]Kugelblitz
 block.prog-mats-blackhole.description = Fires small black holes that sucks in units and bullets.\n[red]WARNING: Black holes coming in contact of those of another team will cause a massive destructive cataclysm.
-block.prog-mats-blackhole.details = Sprite based off of sprite provided by Goober.
+block.prog-mats-blackhole.details = Sprite based off of a sprite provided by Goober.
 
 ## Popeshadow
 block.prog-mats-excalibur.name = [yellow]Excalibur
@@ -91,13 +92,13 @@ block.prog-mats-violet.description = Controls a ring of giant flying swords to s
 ## Missile
 block.prog-mats-firestorm.name = [red]Firestorm
 block.prog-mats-firestorm.description = Fires barrages of small [red]strike missiles[] into the sky that land and explode on targets.
-block.prog-mats-firestorm.details = Amazing sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?
+block.prog-mats-firestorm.details = Sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?
 block.prog-mats-strikedown.name = [red]Strikedown
 block.prog-mats-strikedown.description = Fires [red]strike missiles[] into the sky that land and explode on targets. Once at high enough altitude, thie missile can drop down early to strike targets.
-block.prog-mats-strikedown.details = Amazing sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?
+block.prog-mats-strikedown.details = Sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?
 block.prog-mats-arbiter.name = [red]Trinity
 block.prog-mats-arbiter.description = Fires nuclear [red]strike missiles[] into the sky that land and explode on targets. Once at high enough altitude, thie missile can drop down early to strike targets.
-block.prog-mats-arbiter.details = Amazing sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?\n\nOn July 16, 1945, the first ever nuclear bomb was detonated in a test conducted by the US Military. The test was called "Codename [red]Trinity[]."
+block.prog-mats-arbiter.details = Sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?\n\nOn July 16, 1945, the first ever nuclear bomb was detonated in a test conducted by the US Military. The test was called "Codename [red]Trinity[]."
 ### Missiles
 block.prog-mats-empty-missile.name = Missile Shell
 block.prog-mats-empty-missile.description = An empty missile shell.
@@ -300,5 +301,5 @@ setting.pm-farting.description = Restart required to apply changes.
 
 ## Mod
 
-mod.prog-mats.author = [#FCC21B]Creator:\n        MEEP of Faith[]\n\n[#FCC21B]Contributors:[]\n        [#FCC21B]ThirstyBoi[] (Eruptor sprite)\n        [#FCC21B]Goober[] (Kugelblitz and Popeshadow sprites)\n        [#FCC21B]VozDuh[] (Missile turret sprites, new icon)\n        [#FCC21B]Ilya246[] (Luminocity damage ramping)\n        [#FCC21B]Kapzduke[] (Tinker sprites)\n        [#FCC21B]GlennFolker[] (Alphableeder)\n        [#FCC21B]lordReddx[] (RU Translation)\n        Some sounds from Freesound.\n        Anyone I stole code from.
+mod.prog-mats.author = [#FCC21B]Creator:\n        MEEP of Faith[]\n\n[#FCC21B]Contributors:[]\n        [#FCC21B]ThirstyBoi[] (Eruptor sprite)\n        [#FCC21B]Goober[] (Kugelblitz and Popeshadow sprites)\n        [#FCC21B]VozDuh[] (Missile turret sprites, new icon)\n        [#FCC21B]Ilya246[] (Luminocity damage ramping)\n        [#FCC21B]Kapzduke[] (Tinker sprites)\n        [#FCC21B]TheMalaysianDude[] (Missile assembler resprite)\n        [#FCC21B]GlennFolker[] (Alphableeder)\n        [#FCC21B]lordReddx[] (RU Translation)\n        Some sounds from Freesound.\n        Anyone I stole code from.
 mod.prog-mats.description = Progressed Materials, but in Java. My main mod, which mostly just adds turrets. I'm just experimenting to see what I can do with the power I hold.\n\nThe name definitely isn't made of the synonyms of "Advance" and "Content".
