--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -287,6 +287,8 @@ bullet.pm-attraction-radius = [stat]{0}[lightgray] attraction force ~ [stat]{1}[
 
 bullet.pm-sentry-spawn = [lightgray]Spawns 
 
+bullet.pm-missing-research = [red]<Research Missing>
+
 pm-missing-research = [red]Research Missing!
 
 ## Settings
