--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -15,7 +15,7 @@ block.prog-mats-mindron-collider.name = Collider
 block.prog-mats-mindron-collider.description = Accelerates titanium and thorium particles at each other to fuse fusium. Requires tons of power.
 block.prog-mats-forge.name = Pyroclast Forge
 block.prog-mats-forge.description = Smelts massive batches of sand, lead, and coal into silicon and metaglass, using pyratite as an additional fuel source. Less fuel is used in hot locations.
-block.prog-mats-shell-press.name = Missile Shell Constructer
+block.prog-mats-shell-press.name = Missile Shell Constructor
 block.prog-mats-shell-press.description = Builds empty missile shells.
 block.prog-mats-missile-factory.name = Missile Assembler
 block.prog-mats-missile-factory.description = Builds the cores of missiles and places them into empty shells.
@@ -287,9 +287,7 @@ bullet.pm-attraction-radius = [stat]{0}[lightgray] attraction force ~ [stat]{1}[
 
 bullet.pm-sentry-spawn = [lightgray]Spawns 
 
-bullet.pm-missing-research = [red]<Research Missing>
-
-pm-missing-research = [red]Research Missing!
+pm-missing-research = [red]<Research Missing>
 
 ## Settings
 
