--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -133,6 +133,12 @@ block.prog-mats-spark.description = Zaps multiple random targets in range.
 block.prog-mats-storm.name = [#F3E979]Storm
 block.prog-mats-storm.description = Zaps numerous random targets in range.
 
+##Apotheosis
+block.prog-mats-apotheosis-nexus.name = [#FF5845]Apotheosis Nexus
+block.prog-mats-apotheosis-nexus.description =
+block.prog-mats-apotheosis-charger.name = [#FF5845]Apotheosis Charge Tower
+block.prog-mats-apotheosis-charger.description = Links to and boosts the power of an [#FF5845]Apotheosis[].
+
 # Distribution
 
 block.prog-mats-floating-conveyor.name = Hydroconveyor
@@ -251,10 +257,6 @@ bar.pm-fuel-use = Fuel per craft: {0}
 
 stat.pm-sentry-lifetime = [lightgray]([stat]{0}[lightgray] second lifetime)
 
-stat.pm-land-speed = On land: 
-stat.pm-liquid-speed = On liquid: 
-stat.pm-deep-speed = On deep liquid: 
-
 stat.pm-inferno = Everything in range
 
 stat.pm-static-power = {0} power units/second per link
@@ -262,7 +264,7 @@ stat.pm-static-power = {0} power units/second per link
 stat.pm-multi-recipe = [accent]Recipe {0}:
 
 stat.pm-fuel = Fuel
-pm-fuel.input [stat]{0}[lightgray] fuel added per item
+pm-fuel.input = [stat]{0}[lightgray] fuel added per item
 pm-fuel.use = [stat]{0}[lightgray] fuel used per craft
 pm-fuel.capacity = [stat]{0}[lightgray] fuel capacity
 ### The extra space is deliberate
@@ -288,6 +290,7 @@ bullet.pm-attraction-radius = [stat]{0}[lightgray] attraction force ~ [stat]{1}[
 bullet.pm-sentry-spawn = [lightgray]Spawns 
 
 pm-missing-research = [red]<Research Missing>
+pm-apotheosis-chargers = Chargers: {0}
 
 ## Settings
 
