hmm yes a damage

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -105,10 +105,10 @@ block.prog-mats-empty-missile.description = An empty missile shell.
 block.prog-mats-basic-missile.name = Basic Missile
 block.prog-mats-basic-missile.description = Explodes on landing, dealing a lot of damage.\nUsed by [red]Strikedowns[] as ammo.
 block.prog-mats-emp-missile.name = EMP Missile
-block.prog-mats-emp-missile.description = Explodes on landing, dealing a damage and stunning units in the area.\nUsed by [red]Strikedowns[] as ammo.
+block.prog-mats-emp-missile.description = Explodes on landing, dealing some damage and stunning units in the area.\nUsed by [red]Strikedowns[] as ammo.
 block.prog-mats-recursive-missile.name = Recursive Missile
 block.prog-mats-recursive-missile.description = Explodes on landing, dealing a lot of damage, and launches smaller missiles on impact. Can do this up to 2 times.\nUsed by [red]Strikedowns[] as ammo.
-block.prog-mats-recursive-missile.details = The physics of this make no sense.
+block.prog-mats-recursive-missile.details = The physics of this make no sense, but who the heck care Mindustry physics don't make sense.
 block.prog-mats-empty-nuke.name = Nuclear Missile Shell
 block.prog-mats-empty-nuke.description = An empty nuclear missile shell.
 block.prog-mats-basic-nuke.name = Basic Nuke
