Day 8: Better connecting, wip effects

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -160,11 +160,11 @@ block.prog-mats-shield-projector.details = It's a square instead of a hexagon be
 
 # Sandbox
 
-block.prog-mats-harbinger.name = [#F3E979]Harbinger
+block.prog-mats-harbinger.name = [#F3E979]Eviscerator
 block.prog-mats-harbinger.description = I CAST FRICK EVERYTHING IN THAT GENERAL DIRECTION.\nSandbox only.\n[red]Lag warning.
 block.prog-mats-harbinger.details = Go to r/Mindustry and search for "The true power of the Duo."
-block.prog-mats-everything-gun.name = Luminosity
-block.prog-mats-everything-gun.description = Fires bullets selected from [red]ALL[] bullets in the game (vanilla or modded) at random - fires more powerful bullets over time.\nSandbox only.\n[darkgray]Hippity hoppity your ears are my property.\n(May or may not get quite laggy 30 seconds in.)
+block.prog-mats-everything-gun.name = Chaos
+block.prog-mats-everything-gun.description = Fires [red]ALL[] bullets in the game (vanilla or modded) at random - fires more powerful bullets over time.\nSandbox only.\n[darkgray]Hippity hoppity your ears are my property.\n(May or may not get quite laggy from all the chaos.)
 block.prog-mats-everything-gun.details = Ilya helped me with the increase damage over time code.\n[red]May or may not crash the game because scriped bullets in other mods can have incompatible custom stuff.
 
 block.prog-mats-sand-driver.name = Sand Driver
