--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -136,10 +136,10 @@ block.prog-mats-storm.name = [#F3E979]Storm
 block.prog-mats-storm.description = Zaps numerous random targets in range.
 
 ##Apotheosis
-block.prog-mats-apotheosis-nexus.name = [#FF5845]Apotheosis Nexus
+block.prog-mats-apotheosis-nexus.name = [#9A27C4]Apotheosis Nexus
 block.prog-mats-apotheosis-nexus.description =
-block.prog-mats-apotheosis-charger.name = [#FF5845]Apotheosis Charge Tower
-block.prog-mats-apotheosis-charger.description = Links to and boosts the power of an [#FF5845]Apotheosis[].
+block.prog-mats-apotheosis-charger.name = [#9A27C4]Apotheosis Charge Tower
+block.prog-mats-apotheosis-charger.description = Links to and boosts the power of an [#9A27C4]Apotheosis[].
 
 # Distribution
 
