Day 9: Piss, slight Shield Projector sprite change, sensible Recursive Missiles

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -109,8 +109,7 @@ block.prog-mats-basic-missile.description = Explodes on landing, dealing a lot o
 block.prog-mats-emp-missile.name = EMP Missile
 block.prog-mats-emp-missile.description = Explodes on landing, dealing some damage and stunning units in the area.\nUsed by [red]Strikedowns[] as ammo.
 block.prog-mats-recursive-missile.name = Recursive Missile
-block.prog-mats-recursive-missile.description = Explodes on landing, dealing a lot of damage, and launches smaller missiles on impact. Can do this up to 2 times.\nUsed by [red]Strikedowns[] as ammo.
-block.prog-mats-recursive-missile.details = The physics of this make no sense, but who the heck care Mindustry physics don't make sense.
+block.prog-mats-recursive-missile.description = Explodes on landing, dealing a lot of damage. Releases weaker versions of itself before landing. Can do this up to 2 times.\nUsed by [red]Strikedowns[] as ammo.
 block.prog-mats-empty-nuke.name = Nuclear Missile Shell
 block.prog-mats-empty-nuke.description = An empty nuclear missile shell.
 block.prog-mats-basic-nuke.name = Basic Nuke
@@ -265,10 +264,10 @@ stat.pm-static-power = {0} power units/second per link
 
 stat.pm-multi-recipe = [accent]Recipe {0}:
 
-stat.pm-fuel = Fuel
-pm-fuel.input = [stat]{0}[lightgray] fuel added per item
-pm-fuel.use = [stat]{0}[lightgray] fuel used per craft
-pm-fuel.capacity = [stat]{0}[lightgray] fuel capacity
+pm-fuel = [lightgray]Fuel:
+pm-fuel.input = [stat]{0}[lightgray] added per item
+pm-fuel.use = [stat]{0}[lightgray] used per craft
+pm-fuel.capacity = [stat]{0}[lightgray] capacity
 ### The extra space is deliberate
 pm-fuel.affinity = [stat]Affinities: 
 
@@ -290,6 +289,8 @@ bullet.pm-suction-radius = [stat]{0}[lightgray] tile suction radius
 bullet.pm-attraction-radius = [stat]{0}[lightgray] attraction force ~ [stat]{1}[lightgray] tiles
 
 bullet.pm-sentry-spawn = [lightgray]Spawns 
+
+bullet.pm-splits = [stat]{0}[lightgray]x split bullets:
 
 pm-missing-research = [red]<Research Missing>
 pm-apotheosis-chargers = Chargers: {0}
