--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -2,7 +2,7 @@
 
 # Item
 
-item.prog-mats-techtanite.name = Techatle
+item.prog-mats-techtanite.name = Valexitite
 item.prog-mats-techtanite.description = A sythetic element fused from titanium and thorium. Used in advanced electronics.
 item.prog-mats-techtanite.details = Based on the real life element Technetium.
 
@@ -14,7 +14,7 @@ liquid.prog-mats-magma.details = This is unobtainable, and it's only purpose is 
 # Production
 
 block.prog-mats-mindron-collider.name = Collider
-block.prog-mats-mindron-collider.description = Accelerates titanium and thorium particles at each other to fuse techatle. Requires tons of power.
+block.prog-mats-mindron-collider.description = Accelerates titanium and thorium particles at each other to fuse valexitite. Requires tons of power.
 block.prog-mats-forge.name = Pyroclast Forge
 block.prog-mats-forge.description = Smelts massive batches of sand, lead, and coal into silicon and metaglass, using pyratite as an additional fuel source. Less fuel is used in hot locations.
 block.prog-mats-shell-press.name = Missile Shell Constructor
