--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -143,7 +143,7 @@ block.prog-mats-apotheosis-charger.description = Links to and boosts the power o
 # Distribution
 
 block.prog-mats-floating-conveyor.name = Hydroconveyor
-block.prog-mats-floating-conveyor.description = Transports items forward. Faster than standard conveyors, but slower than titanium conveyors. Placable in deep liquids.
+block.prog-mats-floating-conveyor.description = Transports items forward. Faster than standard conveyors, but slower than titanium conveyors. Can be placed in deep liquids.
 block.prog-mats-burst-driver.name = Burst Driver
 block.prog-mats-burst-driver.description = Long-range item transport structure. Fires massive long bursts of items to other burst drivers.\nSingular items are lighter than a large amount bunched together, so it's range and speed are faster than mass drivers.
 
