--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -176,7 +176,7 @@ block.prog-mats-rainbow-power-source.name = Rainbow Power Source
 block.prog-mats-rainbow-power-source.description = Better than the average power source. Also is rainbowy.\nSandbox only.
 block.prog-mats-rainbow-power-source.details = CREATE THE GAY POWER!
 block.prog-mats-rainbow-power-boost.name = Rainbow Power Boost Source
-block.prog-mats-rainbow-power-boost.description = Like the rainbow power source, but anything attached that can be overdriven gets boosted.\nSandbox only.
+block.prog-mats-rainbow-power-boost.description = Like the rainbow power source, but everything in its power system gets boosted.\nSandbox only.
 block.prog-mats-rainbow-power-boost.details = AMPLIFY WITH THE GAY POWER!
 
 block.prog-mats-sandbox-wall.name = Sandbox Wall
