--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -30,7 +30,7 @@ block.prog-mats-sentry-builder.description = Constructs sentry units that can be
 ## Eruptor
 block.prog-mats-flame.name = [crimson]Flame
 block.prog-mats-flame.description = Opens the ground under enemies, blasting them with lava.\n\n[red]Note: Causes fire. [crimson]A lot of fire.
-block.prog-mats-flame.details = Big thanks to ThirstyBoi for redoing the sprites for this! (Now to do the other 2 myself...)
+block.prog-mats-flame.details = Found in the wreakage of impact0078. Believed to have once been used for terraforming the landscape.\n\nResprite by ThirstyBoi.
 block.prog-mats-blaze.name = [crimson]Blaze
 block.prog-mats-blaze.description = Opens a larger hole in the ground, sprouting out even more lava.\n\n[red]Note: Causes fire. [crimson]A ton of fire.
 block.prog-mats-inferno.name = [crimson]Inferno
@@ -58,7 +58,7 @@ block.prog-mats-excalibur.details = Sprite by Goober.\nAnimations by me.
 ## bUiLdIn A sEnTrY
 block.prog-mats-tinker.name = [gold]Tinker
 block.prog-mats-tinker.description = Launches strong sentry units that expire after a duration.
-block.prog-mats-tinker.details = Sprite by Kapzduke
+block.prog-mats-tinker.details = Original sprite by Kapzduke. Slighly edited by me in the Payload Update.
 ### Ammo payloads
 block.prog-mats-basic-sentry.name = Basic Sentry
 block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [orange]Tinkers[] as ammo.
