--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -100,7 +100,7 @@ block.prog-mats-strikedown.description = Fires [red]strike missiles[] into the s
 block.prog-mats-strikedown.details = Sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?
 block.prog-mats-arbiter.name = [red]Trinity
 block.prog-mats-arbiter.description = Fires nuclear [red]strike missiles[] into the sky that land and explode on targets. Once at high enough altitude, thie missile can drop down early to strike targets.
-block.prog-mats-arbiter.details = Sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?\n\nOn July 16, 1945, the first ever nuclear bomb was detonated in a test conducted by the US Military. The test was called "Codename [red]Trinity[]."
+block.prog-mats-arbiter.details = On July 16, 1945, the first ever nuclear bomb was detonated in a test conducted by the US Military. The test was called "Codename [red]Trinity[]."\n\nSprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?
 ### Missiles
 block.prog-mats-empty-missile.name = Missile Shell
 block.prog-mats-empty-missile.description = An empty missile shell.
