--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -292,6 +292,8 @@ bullet.pm-sentry-spawn = [lightgray]Spawns
 
 bullet.pm-splits = [stat]{0}[lightgray]x split bullets:
 
+bullet.pm-continuoussplashdamage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}[lightgray] tiles
+
 pm-missing-research = [red]<Research Missing>
 pm-apotheosis-chargers = Chargers: {0}
 
