Require coolant to fire.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,4 +1,4 @@
-# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole fil
 
 # Item
 
@@ -136,9 +136,9 @@ block.prog-mats-storm.description = Zaps numerous random targets in range.
 
 ##Apotheosis
 block.prog-mats-apotheosis-nexus.name = [#9A27C4]Apotheosis Nexus
-block.prog-mats-apotheosis-nexus.description =
+block.prog-mats-apotheosis-nexus.description = Fires a devastating laser into the sky that arcs down and decimates an area. Requires extensive cooling to operate.
 block.prog-mats-apotheosis-charger.name = [#9A27C4]Apotheosis Charge Tower
-block.prog-mats-apotheosis-charger.description = Links to and boosts the power of an [#9A27C4]Apotheosis[].
+block.prog-mats-apotheosis-charger.description = Fires a laser at an [#9A27C4]Apotheosis[] to give it a major boost in power.
 
 # Distribution
 
