The balancing begins
aaaaaaaaaAAAAAAAAAAAAAAAAAAAAAA

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -296,6 +296,7 @@ bullet.pm-continuoussplashdamage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}
 
 pm-missing-research = [red]<Research Missing>
 pm-apotheosis-chargers = Chargers: {0}
+pm-apotheosis-falloff = [stat]{0}%[lightgray] boost falloff (Boost from chargers decreases as more are added)
 
 ## Settings
 
